data/derived/comb/progs/unify/prog3760.ml.out
Characters 32-33:
  let rec mulByDigit i l = helper 0 i l;;
                                  ^
Error: This expression has type int but an expression was expected of type
         int list
